@@ -35,6 +35,7 @@ Cacti CHANGELOG
 -feature#0001406: Dynamically display field description for templates
 -feature#0001408: Hide templated input fields
 -feature#0001409: Add context sensitive page help linking to cacti dokuwiki
+-feature#0001438: Allow for drag and drop reordering of graph template items
 -feature: jQuery "TableDnd" used for cdef item sort (courtesy Browniebraun)
 -feature: Default Script Server/Script Queries now accept host specific ping_retries, max_oids
 -feature: Support for new variables |host_ping_retries| and |host_max_oids|
